Run Tomcat in forked execution mode.
It decreases memory consumption due to the fact that the Grails build
system can exit after it finishes, so the JVM can reclaim that memory.